Prevent horizontal overflowing on mobile

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 875px) {
+    div.body {
+        /* prevent horizontal overflowing on mobile */
+        min-width: inherit;
+    }
+}
+
 p.logo {
     text-align: left;
 }
